unpackaged/main/default/objects/Case_Escalation__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>For Out of Scope</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>