unpackaged/main/default/objects/Case_Escalation__c/fields/Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Comments__c</fullName>
    <label>Escalation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>