unpackaged/main/default/objects/Case_Escalation__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Routing</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Do not have required access</fullName>
                <isActive>false</isActive>
                <label>Do not have required access</label>
            </value>
            <value>
                <fullName>Inccorect Routing</fullName>
                <isActive>false</isActive>
                <label>Inccorect Routing</label>
            </value>
            <value>
                <fullName>Insufficient Training</fullName>
                <isActive>false</isActive>
                <label>Insufficient Training</label>
            </value>
            <value>
                <fullName>No Access in Panda</fullName>
                <isActive>false</isActive>
                <label>No Access in Panda</label>
            </value>
            <value>
                <fullName>Unable to Resolve with Macro</fullName>
                <isActive>false</isActive>
                <label>Unable to Resolve with Macro</label>
            </value>
            <value>
                <fullName>Unable to resolve with Knowledge Base</fullName>
                <isActive>false</isActive>
                <label>Unable to resolve with Knowledge Base</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>