unpackaged/main/default/objects/Case_Escalation__c/fields/Out_of_Scope_Reason__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Scope_Reason__c</fullName>
    <description>Reason why this case is out of scope for the vendor</description>
    <label>Out of Scope Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not have required access - Hippo</fullName>
            </value>
            <value>
                <fullName>Do not have required access - Panda</fullName>
            </value>
            <value>
                <fullName>Insufficient training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>