unpackaged/main/default/objects/Case_Escalation__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>What team is this Case Escalation for.</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated Support</fullName>
            </value>
            <value>
                <fullName>VIP Partner</fullName>
            </value>
            <value>
                <fullName>TaxRes</fullName>
            </value>
            <value>
                <fullName>Financial Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>