unpackaged/main/default/objects/Case_Escalation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Us Escalation</fullName>
            </value>
            <value>
                <fullName>Social Escalation</fullName>
            </value>
            <value>
                <fullName>Executive Escalation</fullName>
            </value>
            <value>
                <fullName>Gustie Escalation</fullName>
            </value>
            <value>
                <fullName>Good Outcomes</fullName>
            </value>
            <value>
                <fullName>NPS Detractors</fullName>
            </value>
            <value>
                <fullName>Better Business Bureau</fullName>
            </value>
            <value>
                <fullName>Abusive Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>