unpackaged/main/default/objects/Case_Escalation__c/fields/Type_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Complaint__c</fullName>
    <description>Identify what type of complaint was made causing escalation</description>
    <label>Type of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Against Third Party</fullName>
            </value>
            <value>
                <fullName>Financial Services Products</fullName>
            </value>
            <value>
                <fullName>Gusto Health Insurance Products</fullName>
            </value>
            <value>
                <fullName>Gusto service (sales or CX or Risk)</fullName>
            </value>
            <value>
                <fullName>Payroll or Tax features and products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>