unpackaged/main/default/objects/Case_Escalation__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Default record type for Reroute Case to Gusto</description>
    <label>Default</label>
</RecordType>