unpackaged/main/default/objects/Case_Escalation__c/recordTypes/Social_Executive.recordType-meta.xml
<RecordType>
    <fullName>Social_Executive</fullName>
    <active>true</active>
    <description>To track escalations stemming form a Case in the system</description>
    <label>Social &amp; Executive</label>
</RecordType>